--- a/index.html
+++ b/index.html
@@ -10,56 +10,66 @@
 </head>
 <body>
 
-  <h1>Prehistoric creatures</h1>
-
   <div class="grid">
 
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+      <img class="img-flex" src="images/maerten-van-heemskerck-abduction-of-helen.jpg" alt="">
+    </div>
+
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+        <h1>The Seven Wonders of the Ancient World</h1>
+      <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </div>
+
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
-        <img class="img-flex" src="images/diplodocus.jpg" alt="">
-        <figcaption>Diplodocus</figcaption>
+        <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
+        <figcaption>
+          <h2>Temple of Artemis</h2>
+        </figcaption>
+        <dl>
+          <dt>Date of construction:</dt>
+            <dd>Circa 550 BC</dd>
+          <dt>Builders:</dt>
+            <dd>Greeks</dd>
+          <dt>Location:</dt>
+            <dd>Selçuk, Turkey</dd>
+        </dl>
       </figure>
     </div>
 
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
-        <img class="img-flex" src="images/hadrosaur.jpg" alt="">
-        <figcaption>Hadrosaur</figcaption>
+        <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
+        <figcaption>
+          <h2>Colossus of Rhodes</h2>
+        </figcaption>
+        <dl>
+          <dt>Date of construction:</dt>
+            <dd>292–280 BC</dd>
+          <dt>Builders:</dt>
+            <dd>Greeks</dd>
+          <dt>Location:</dt>
+            <dd>Rhodes, Greece</dd>
+        </dl>
       </figure>
     </div>
 
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
-        <img class="img-flex" src="images/iguanodon.jpg" alt="">
-        <figcaption>Iguanodon</figcaption>
-      </figure>
-    </div>
-
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
-      <figure>
-        <img class="img-flex" src="images/stegosaurus.jpg" alt="">
-        <figcaption>Stegosaurus</figcaption>
-      </figure>
-    </div>
-
-    <div class="unit l-1-3">
-      <figure>
-        <img class="img-flex" src="images/archeopteryx.jpg" alt="">
-        <figcaption>Archeopteryx</figcaption>
-      </figure>
-    </div>
-
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-3">
-      <figure>
-        <img class="img-flex" src="images/pteranodon.jpg" alt="">
-        <figcaption>Pteranodon</figcaption>
-      </figure>
-    </div>
-
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-3">
-      <figure>
-        <img class="img-flex" src="images/rhamphorhynchus.jpg" alt="">
-        <figcaption>Rhamphorhynchus</figcaption>
+        <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
+        <figcaption>
+          <h2>Hanging Gardens of Babylon</h2>
+        </figcaption>
+        <dl>
+          <dt>Date of construction:</dt>
+            <dd>Circa 600 BC</dd>
+          <dt>Builders:</dt>
+            <dd>Babylonians</dd>
+          <dt>Location:</dt>
+            <dd>Nineveh, Iraq</dd>
+        </dl>
       </figure>
     </div>
 
