--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
   <div class="grid">
 
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1-2 m-1-4 l-1">
       <img class="img-flex" src="images/maerten-van-heemskerck-abduction-of-helen.jpg" alt="">
     </div>
 
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1-2 m-1-4 l-1-2">
       <h1>The Seven Wonders of the Ancient World</h1>
       <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </div>
 
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
         <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
         <figcaption>
@@ -39,7 +39,7 @@
       </figure>
     </div>
 
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1-4 m-1-3 l-1-3">
       <figure>
         <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
         <figcaption>
@@ -56,7 +56,7 @@
       </figure>
     </div>
 
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1-4 m-1-3 l-1-3">
       <figure>
         <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
         <figcaption>
